--- a/index.html
+++ b/index.html
@@ -3,16 +3,6 @@
 
 <head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156853760-1"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-156853760-1');
-        </script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -103,11 +93,11 @@
          -->
         <section id="header">
             <header class="profile">
-                <img src="DSC_1032-reduced.jpg" alt="Onkar Shaligram's Image" class="profile__image">
-                <h1 class="profile__name">Onkar</h1>
-                <h1 class="profile__name">Shaligram</h1>
+                <img src="DSC_1032-reduced.jpg" alt="Ben Israel's Image" class="profile__image">
+                <h1 class="profile__name">Ben</h1>
+                <h1 class="profile__name">Israel</h1>
                 <hr>
-                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Web developer.", "Android developer.", "AI/ML geek.", "UI/UX Designer." ]'>
+                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast.", "UI/UX Designer.", "Consultant" ]'>
                 </a></p>
                 <div class="socialMedia">
 
