--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <i class="fab fa-linkedin socialMedia__icon"></i>
                     </a>
 
-                    <a href="https://github.com/onkar-shaligram" target="_blank">
+                    <a href="https://github.com/benisrael29" target="_blank">
                         <i class="fab fa-github socialMedia__icon"></i>
                     </a>
                     
