--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,7 +13,7 @@
    
    
     <meta name="theme-color" content="#21695a">
-    <title>Onkar Shaligram </title>
+    <title>Ben Israel </title>
     
     <link rel="shortcut icon" href="https://www.clipartmax.com/png/middle/132-1326818_icon-smoke-fire-flame-icon-black-png.png" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/styles/style-index.css">
