--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
                 <li><a href="#github_contributions">Github</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
-                <li><a href="https://pages.razorpay.com/pl_EffHr7eq0RB0xN/view" target="blank" style="color: yellow;">Donate</a></li>
               </ul>
             </div>
           </div>
@@ -100,7 +99,7 @@
                 </a></p>
                 <div class="socialMedia">
 
-                    <a href="https://twitter.com/shaligram_onkar" target="_blank">
+                    <a href="https://twitter.com/benisra12382837" target="_blank">
                         <i class="fab fa-twitter socialMedia__icon"></i>
                     </a>
 
@@ -108,7 +107,7 @@
                         <i class="fab fa-instagram socialMedia__icon"></i>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/onkar-shaligram-a9799b190/" target="_blank">
+                    <a href="https://www.linkedin.com/in/israelben/" target="_blank">
                         <i class="fab fa-linkedin socialMedia__icon"></i>
                     </a>
 
@@ -117,7 +116,7 @@
                     </a>
                     
                 </div>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfP-P8ZAj80rW_cgDaYvERNoaR09BNtE3ZjGzEeKe-kTR7IFg/viewform" target="_blank" class="profile__link">My Resume</a>
+                <a href="https://drive.google.com/file/d/1Wl6ijvp0u6kRDbkuavJG0605YOpQl7bq/view?usp=sharing" target="_blank" class="profile__link">My Resume</a>
             </header>
         </section>
         <!-- 
