--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h1 class="profile__name">Ben</h1>
                 <h1 class="profile__name">Israel</h1>
                 <hr>
-                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast.", "UI/UX Designer.", "Consultant" ]'>
+                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "Consultant Inter" ]'>
                 </a></p>
                 <div class="socialMedia">
 
