--- a/index.html
+++ b/index.html
@@ -130,22 +130,17 @@
                 <h1 class="content__heading">About Me</h1>
                 <hr>
                 <p class="content__para">
-                    Hey, I'm Onkar Shaligram, a 19-year-old undergrad, currently living in Bhopal (MP), India. Originally from Pune (MH), India.
+                    Hey, I'm Ben Israel I am an undergrad student at the University of Queensland in Brisbane, AU studying a dual of Science and Engineering (Biomedical/Software). 
                 </p>
 
                 <p class="content__para">
-                   I am a programmer with intermidiate knowledge of front-end & back-end techniques. I love spending time on fixing little details and optimizing web apps. Also I like working in a team, as you learn faster and much more. As the saying goes: <br> 'Two heads are better than one.!!'.
+                   As a programmer I have intermidiate knowledge of front-end & back-end techniques. I'm passionate about great design and elegant solutions to hard problems. 
                 </p>
 
                 <p class="content__para">
-                    I will be earning a degree in Bachelor of Technology in Computer Science from VIT Bhopal University probably in 2023.
+                    All going to plan I finsh both my degrees in July 2023. 
                 </p>
 
-                <p class="content__para">If you wish to connect with me, then find me at
-                    <a href="https://twitter.com/shaligram-onkar" target="_blank" class="content__link">Twitter</a>,
-                    <a href="https://www.linkedin.com/in/onkar-shaligram-a9799b190/" target="_blank" class="content__link"> Linkedin</a> and also on
-                    <a href="https://github.com/onkar-shaligram" target="_blank" class="content__link">Github</a>.
-                </p>
 
                 <p class="content__para">
                     <strong>
@@ -211,15 +206,6 @@
                         <figcaption>Java</figcaption>
                     </figure>
 
-                    <figure class="flexParent__skill">
-                        <img src="https://img.icons8.com/color/100/000000/flutter.png"/>
-                        <figcaption>Flutter</figcaption>
-                    </figure>
-
-                    <figure class="flexParent__skill">
-                        <img src="https://img.icons8.com/color/100/000000/source-code.png"/>
-                        <figcaption>Dart</figcaption>
-                    </figure>
 
                     <figure class="flexParent__skill">
                         <img src="https://img.icons8.com/color/100/000000/git.png"/>
