--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h1 class="profile__name">Ben</h1>
                 <h1 class="profile__name">Israel</h1>
                 <hr>
-                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "Consultant Inter" ]'>
+                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "Consulting Inter" ]'>
                 </a></p>
                 <div class="socialMedia">
 
@@ -148,7 +148,7 @@
             <section id="skills" class="paddingTop">
                 <h1 class="content__heading">My Skills</h1>
                 <hr>
-                <p class="content__para textCenter">The Technologies / Frameworks that I have gained / Tried so far are listed below:</p>
+                <p class="content__para textCenter">The technologies that I am familiar with:</p>
 
                 <div class="flexParent">
 
@@ -179,11 +179,6 @@
                     </figure>
 
                     <figure class="flexParent__skill">
-                       <img src="https://img.icons8.com/color/100/000000/c-plus-plus-logo.png"/>
-                        <figcaption>C++</figcaption>
-                    </figure>
-
-                    <figure class="flexParent__skill">
                         <img src="https://img.icons8.com/color/100/000000/c-programming.png"/>
                         <figcaption>C</figcaption>
                     </figure>
@@ -194,12 +189,16 @@
                     </figure>
 
                     <figure class="flexParent__skill">
+                        <img src="https://img.icons8.com/color/100/000000/azure.png"/>
+                         <figcaption>Azure</figcaption>
+                     </figure>
+
+                    <figure class="flexParent__skill">
                         <svg class="logo" viewBox="0 0 128 128">
                             <use xlink:href="assets/images/svg/svg-sprite.svg#icon-java"></use>
                         </svg>
                         <figcaption>Java</figcaption>
                     </figure>
-
 
                     <figure class="flexParent__skill">
                         <img src="https://img.icons8.com/color/100/000000/git.png"/>
@@ -258,7 +257,7 @@
                                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
-                                <div class="col-md-6" id="progress_head">C++
+                                <div class="col-md-6" id="progress_head">Java
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="80%">
                                         <div class="progress-bar" role="progressbar" style="background-color:#eff317;width: 80%;"
@@ -282,7 +281,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6" id="progress_head">Flutter
+                                <div class="col-md-6" id="progress_head">Azure
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="60%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1714d4;width: 60%"
                                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
