--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#github_contributions">Github</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact Me</a></li>
               </ul>
             </div>
@@ -95,7 +94,7 @@
                 <h1 class="profile__name">Ben</h1>
                 <h1 class="profile__name">Israel</h1>
                 <hr>
-                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "Consulting Inter" ]'>
+                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "Consulting Intern" ]'>
                 </a></p>
                 <div class="socialMedia">
 
@@ -203,6 +202,11 @@
                     <figure class="flexParent__skill">
                         <img src="https://img.icons8.com/color/100/000000/git.png"/>
                         <figcaption>Git</figcaption>
+                    </figure>
+
+                    <figure class="flexParent__skill">
+                        <img src="https://img.icons8.com/color/100/000000/react.png"/>
+                        <figcaption>React</figcaption>
                     </figure>
 
                     <figure class="flexParent__skill">
@@ -314,7 +318,7 @@
 
          
 
-                <h1 class="content__heading paddingTop" id="projects">PROJECTS</h1>
+                <h1 class="content__heading paddingTop" id="experience">PROJECTS</h1>
                 <hr>
                 <p class="content__para textCenter">All my projects can be found on my <strong><a href="https://github.com/onkar-shaligram"target="_blank" style="text-decoration: none; color: #0138B7;">Github</a> </strong> account</p>
                 <div class="flexParent">
@@ -414,7 +418,7 @@
 
         <div class="socialMedia">
 
-            <a href="https://twitter.com/shaligram_onkar" target="_blank">
+            <a href="https://twitter.com/benisra12382837" target="_blank">
                 <i class="fab fa-twitter socialMedia__icon"></i>
             </a>
 
@@ -422,17 +426,17 @@
                 <i class="fab fa-instagram socialMedia__icon"></i>
             </a>
 
-            <a href="https://www.linkedin.com/in/onkar-shaligram-a9799b190/" target="_blank">
+            <a href="https://www.linkedin.com/in/israelben" target="_blank">
                 <i class="fab fa-linkedin socialMedia__icon"></i>
             </a>
 
-            <a href="https://github.com/onkar-shaligram" target="_blank">
+            <a href="https://github.com/benisrael29" target="_blank">
                 <i class="fab fa-github socialMedia__icon"></i>
             </a>
 
         </div>
 
-        <p class="copyright">&copy; Onkar Shaligram</p>
+        <p class="copyright">&copy; Ben Israel</p>
     </footer>
 
 
