--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h1 class="content__heading">About Me</h1>
                 <hr>
                 <p class="content__para">
-                    Hey, I'm Ben Israel I am an undergrad student at the University of Queensland in Brisbane, AU studying a dual of Science and Engineering (Biomedical/Software). 
+                    Hi, I'm Ben Israel an undergrad student at the University of Queensland in Brisbane, AU studying a dual of Science and Engineering (Biomedical/Software). 
                 </p>
 
                 <p class="content__para">
@@ -137,7 +137,7 @@
                 </p>
 
                 <p class="content__para">
-                    All going to plan I finsh both my degrees in July 2023. 
+                    I plan on finishing both my degrees in July 2023. Thanks for checking out my website. 
                 </p>
 
             </section>
@@ -205,8 +205,8 @@
                     </figure>
 
                     <figure class="flexParent__skill">
-                        <img src="https://img.icons8.com/color/100/000000/react.png"/>
-                        <figcaption>React</figcaption>
+                        <img src="https://img.icons8.com/color/100/000000/mysql.png"/>
+                        <figcaption>mySQL</figcaption>
                     </figure>
 
                     <figure class="flexParent__skill">
