--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
                                 <div class="col-md-6" id="progress_head">C
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="80%">
-                                        <div class="progress-bar" role="progressbar" style="background-color:#ce2525;width:80%"
+                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width:80%"
                                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
                                 <div class="col-md-6" id="progress_head">Java
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="80%">
-                                        <div class="progress-bar" role="progressbar" style="background-color:#eff317;width: 80%;"
+                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 80%;"
                                             aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
@@ -273,13 +273,13 @@
                                 <div class="col-md-6" id="progress_head">HTML
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="70%"> 
-                                         <div class="progress-bar" role="progressbar" style="background-color: #ff86e4;width: 70%;"
+                                         <div class="progress-bar" role="progressbar" style="background-color: #1d1d1d6c;width: 70%;"
                                             aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
                                 <div class="col-md-6" id="progress_head">CSS
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="70%">                                        <div class="progress-bar" role="progressbar" style="background-color:#ffa600;width: 70%"
+                                        <a data-toggle="tooltip" title="70%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 70%"
                                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
@@ -287,13 +287,13 @@
                             <div class="row">
                                 <div class="col-md-6" id="progress_head">Azure
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="60%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1714d4;width: 60%"
+                                        <a data-toggle="tooltip" title="60%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 60%"
                                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
                                 <div class="col-md-6" id="progress_head">JavaScript
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="30%">                                        <div class="progress-bar" role="progressbar" style="background-color:#14f300;width: 30%"
+                                        <a data-toggle="tooltip" title="30%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 30%"
                                             aria-valuenow="76" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
@@ -301,13 +301,13 @@
                             <div class="row">
                                 <div class="col-md-6" id="progress_head">Git
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="80%">                                        <div class="progress-bar" role="progressbar" style="background-color:#a82296;width: 80%"
+                                        <a data-toggle="tooltip" title="80%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 80%"
                                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
                                 <div class="col-md-6" id="progress_head">Python
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="30%">                                        <div class="progress-bar" role="progressbar" style="background-color:#56ceaa;width: 30%"
+                                        <a data-toggle="tooltip" title="30%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 30%"
                                             aria-valuenow="76" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
@@ -318,7 +318,7 @@
 
          
 
-                <h1 class="content__heading paddingTop" id="experience">PROJECTS</h1>
+                <h1 class="content__heading paddingTop" id="experience">Experience and Projects</h1>
                 <hr>
                 <p class="content__para textCenter">All my projects can be found on my <strong><a href="https://github.com/onkar-shaligram"target="_blank" style="text-decoration: none; color: #0138B7;">Github</a> </strong> account</p>
                 <div class="flexParent">
