retroactive game addition

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="flexParent">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-6" id="progress_head">C
+                                <div class="col-md-6" id="progress_head">Python
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="80%">
                                         <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width:80%"
@@ -277,9 +277,9 @@
                                             aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
-                                <div class="col-md-6" id="progress_head">CSS
+                                <div class="col-md-6" id="progress_head">JavaScript
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="70%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 70%"
+                                        <a data-toggle="tooltip" title="65%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 70%"
                                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
@@ -287,11 +287,11 @@
                             <div class="row">
                                 <div class="col-md-6" id="progress_head">Azure
                                     <div class="progress">
-                                        <a data-toggle="tooltip" title="60%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 60%"
+                                        <a data-toggle="tooltip" title="50%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 60%"
                                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
-                                <div class="col-md-6" id="progress_head">JavaScript
+                                <div class="col-md-6" id="progress_head">C
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="30%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 30%"
                                             aria-valuenow="76" aria-valuemin="0" aria-valuemax="100"></div>
@@ -305,7 +305,7 @@
                                             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div></a> <br>
                                 </div>
-                                <div class="col-md-6" id="progress_head">Python
+                                <div class="col-md-6" id="progress_head">fireBase
                                     <div class="progress">
                                         <a data-toggle="tooltip" title="30%">                                        <div class="progress-bar" role="progressbar" style="background-color:#1d1d1d6c;width: 30%"
                                             aria-valuenow="76" aria-valuemin="0" aria-valuemax="100"></div>
@@ -320,13 +320,13 @@
 
                 <h1 class="content__heading paddingTop" id="experience">Experience and Projects</h1>
                 <hr>
-                <p class="content__para textCenter">All my projects can be found on my <strong><a href="https://github.com/onkar-shaligram"target="_blank" style="text-decoration: none; color: #0138B7;">Github</a> </strong> account</p>
+                <p class="content__para textCenter">All my projects can be found on my <strong><a href="https://github.com/benisrael29"target="_blank" style="text-decoration: none; color: #0138B7;">Github</a> </strong> account</p>
                 <div class="flexParent">
-                    <a href="https://github.com/onkar-shaligram/CoffeeWala_app" target="_blank" style="text-decoration: none; color: #000000;">
+                    <a href="https://github.com/benisrael29/Retroactive" target="_blank" style="text-decoration: none; color: #000000;">
                     <figure class="flexParent__skill">
-                        <img src="https://img.icons8.com/material/100/000000/tea-cup.png"/>
+                        <img src="src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-game-gaming-ecommerce-flaticons-lineal-color-flat-icons-3.png"/>
                         
-                        <figcaption>CoffeeWala App</figcaption>
+                        <figcaption>Retroactive Game</figcaption>
                     </figure>
                 </a>
 
