--- a/index.html
+++ b/index.html
@@ -321,19 +321,10 @@
                 <h1 class="content__heading paddingTop" id="experience">Experience and Projects</h1>
                 <hr>
                 <p class="content__para">
-                    Hi, I'm Ben Israel an undergrad student at the University of Queensland in Brisbane, AU studying a dual of Science and Engineering (Biomedical/Software). 
+                    Since I started Uni I have worked in both tech and non tech related roles. See my resume for more details about my experiance. 
                 </p>
 
-                <p class="content__para">
-                   As a programmer I have intermidiate knowledge of front-end & back-end techniques. I'm passionate about great design and elegant solutions to hard problems. 
-                </p>
-
-                <p class="content__para">
-                    I plan on finishing both my degrees in July 2023. Thanks for checking out my website. 
-                </p>
                     
-                </div>
-
             
             <!-- 
                 Contact Me Section
@@ -342,7 +333,7 @@
                 <h1 class="content__heading paddingTop">Get in Touch</h1>
                 <hr>
 
-                <form class="contactForm js-contactForm" id="ajaxForm" action="https://formcarry.com/s/G-4SQ70qhCMS" method="POST" accept-charset="UTF-8">
+                <form action="https://formcarry.com/s/CXK0AY0A18i" method="POST" accept-charset="UTF-8" >
 
                     <form id="my-formcarry" accept-charset="UTF-8">
                         ...
