--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <h1 class="content__heading paddingTop" id="experience">Experience and Projects</h1>
                 <hr>
                 <p class="content__para">
-                    Since I started Uni I have worked in both tech and non tech related roles. See my resume for more details about my experiance. 
+                    Since I started Uni I have worked in both tech and non tech roles. Check out my resume up top for more details about my experiance. If you want to get in contact feel free to use the form below or call on 0487631858. Cheers. 
                 </p>
 
                     
