--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h1 class="content__heading">About Me</h1>
                 <hr>
                 <p class="content__para">
-                    Hi, I'm Ben Israel an undergrad student at the University of Queensland in Brisbane, AU studying a dual of Science and Engineering (Biomedical/Software). 
+                    Hi, I'm Ben Israel an undergrad student at the University of Queensland in Brisbane, AU studying a dual degree of Science and Engineering (Biomedical/Software). 
                 </p>
 
                 <p class="content__para">
