--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <h1 class="content__heading paddingTop" id="experience">Experience and Projects</h1>
                 <hr>
                 <p class="content__para">
-                    Since I started Uni I have worked in both tech and non tech roles. Check out my resume up top for more details about my experiance. If you want to get in contact feel free to use the form below or call on 0487631858. Cheers. 
+                    Since I started Uni I have worked in both tech and non tech roles. Check out my resume up top for more details about my experiance.
                 </p>
 
                     
@@ -336,7 +336,7 @@
                 <form action="https://formcarry.com/s/CXK0AY0A18i" method="POST" accept-charset="UTF-8" >
 
                     <form id="my-formcarry" accept-charset="UTF-8">
-                        ...
+                    Fill in this form and I'll get back to you or phone on 0487631858. Cheers
                                               
                     <div class="inputFields">
 
