--- a/index.html
+++ b/index.html
@@ -336,7 +336,9 @@
                 <form action="https://formcarry.com/s/CXK0AY0A18i" method="POST" accept-charset="UTF-8" >
 
                     <form id="my-formcarry" accept-charset="UTF-8">
-                    Fill in this form and I'll get back to you or phone on 0487631858. Cheers
+                    <p class="content__para">
+                        Fill in this form and I'll get back to you or call on 0487631858.
+                    </p>
                                               
                     <div class="inputFields">
 
