--- a/index.html
+++ b/index.html
@@ -441,24 +441,19 @@
     <script src="assets/scripts/particles.min.js"></script>
     <script src="assets/scripts/app.js"></script>
 
-    <!-- Default Statcounter code for Portfolio Website
-        https://onkar-shaligram.github.io/ -->
-    <script type="text/javascript">
-        var sc_project=12353281; 
-        var sc_invisible=1; 
-        var sc_security="3032f0f0"; 
-        var sc_https=1; 
-        </script>
-        <script type="text/javascript"
-        src="https://www.statcounter.com/counter/counter.js"
-        async></script>
-        <noscript><div class="statcounter"><a title="Web Analytics
-        Made Easy - StatCounter" href="https://statcounter.com/"
-        target="_blank"><img class="statcounter"
-        src="https://c.statcounter.com/12353281/0/3032f0f0/1/"
-        alt="Web Analytics Made Easy -
-        StatCounter"></a></div></noscript>
-        <!-- End of Statcounter Code -->
+<!-- Default Statcounter code for Resume http://benisrael29.github.io -->
+<script type="text/javascript">
+    var sc_project=12752104; 
+    var sc_invisible=1; 
+    var sc_security="7e603db6"; 
+    </script>
+    <script type="text/javascript"
+    src="https://www.statcounter.com/counter/counter.js" async></script>
+    <noscript><div class="statcounter"><a title="Web Analytics"
+    href="https://statcounter.com/" target="_blank"><img class="statcounter"
+    src="https://c.statcounter.com/12752104/0/7e603db6/1/" alt="Web Analytics"
+    referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
  
 
 </body>
