Adding devops engineer

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h1 class="profile__name">Ben</h1>
                 <h1 class="profile__name">Israel</h1>
                 <hr>
-                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "Consulting Intern" ]'>
+                <p class="profile__profession"> <a class="typewrite" data-period="2000" data-type='["Software Engineer", "AI/ML enthusiast", "UI/UX Designer", "DevOps Engineer" ]'>
                 </a></p>
                 <div class="socialMedia">
 
@@ -453,7 +453,7 @@
     href="https://statcounter.com/" target="_blank"><img class="statcounter"
     src="https://c.statcounter.com/12752104/0/7e603db6/1/" alt="Web Analytics"
     referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-    <!-- End of Statcounter Code -->
+    <!-- End of Statcounter Code -->f
  
 
 </body>
